--- a/charts/fact-cron-trigger/Chart.yaml
+++ b/charts/fact-cron-trigger/Chart.yaml
@@ -8,5 +8,5 @@ maintainers:
   - name: HMCTS fact team
 dependencies:
   - name: java
-    version: 5.2.1
+    version: v5.3.0
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
