--- a/build.gradle
+++ b/build.gradle
@@ -118,7 +118,7 @@ project.tasks['check'].dependsOn integration
 
 sonarqube {
   properties {
-    property "sonar.projectName", "Reform :: fact-cron-trigger"
+    property "sonar.projectName", "fact :: fact-cron-trigger"
     property "sonar.projectKey", "uk.gov.hmcts.reform:fact-cron-trigger"
   }
 }
