--- a/build.gradle
+++ b/build.gradle
@@ -154,6 +154,7 @@ ext {
 ext['snakeyaml.version'] = '2.0'
 
 dependencies {
+  implementation group: 'com.azure.spring', name: 'spring-cloud-azure-starter-storage-blob', version: '5.21.0'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
