modifying charts etc

--- a/charts/fact-cron-trigger/values.yaml
+++ b/charts/fact-cron-trigger/values.yaml
@@ -9,6 +9,6 @@ java:
         - name: AppInsightsInstrumentationKey
           alias: azure.application-insights.instrumentation-key
         - name: storage-account-connection-string
-          alias: azure.blob.azure-connection-string
+          alias: azure.blob.connection-string
   environment:
     FACT_API_URL: "http://fact-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal"
