--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,16 @@ test {
   failFast = true
 }
 
+ext.getVaultSecret = { String secretName ->
+  new ByteArrayOutputStream().withStream { os ->
+    exec {
+      commandLine 'az', 'keyvault', 'secret', 'show', '--vault-name', 'fact-aat', '-o', 'tsv', '--query', 'value', '--name', secretName
+      standardOutput = os
+    }
+    return os.toString().replace('\n', '')
+  }
+}
+
 task functional(type: Test) {
   description = "Runs functional tests"
   group = "Verification"
@@ -91,6 +101,21 @@ task functional(type: Test) {
 }
 
 task integration(type: Test) {
+
+  // Int tests run at the same level as unit, so the env vars required for tests are not present
+  doFirst() {
+    if (System.getenv("STORAGE_ACCOUNT_CONNECTION_STRING") == null) {
+      exec {
+        commandLine 'az', 'login', '--identity'
+      }
+      println("Loading secrets and admin credentials from vault")
+      systemProperty 'STORAGE_ACCOUNT_CONNECTION_STRING', getVaultSecret('storage-account-connection-string');
+    }
+    else {
+      println('Not retrieving; STORAGE_ACCOUNT_CONNECTION_STRING secret found');
+    }
+  }
+
   description = "Runs integration tests"
   group = "Verification"
   testClassesDirs = sourceSets.integrationTest.output.classesDirs
