--- a/charts/fact-cron-trigger/values.yaml
+++ b/charts/fact-cron-trigger/values.yaml
@@ -12,3 +12,8 @@ java:
           alias: STORAGE_ACCOUNT_CONNECTION_STRING
   environment:
     FACT_API_URL: "http://fact-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal"
+  global:
+    jobKind: CronJob
+    enableKeyVaults: true
+  schedule: "0 1 * * *"
+  disableActiveClusterCheck: true
