--- a/charts/fact-cron-trigger/values.yaml
+++ b/charts/fact-cron-trigger/values.yaml
@@ -1,4 +1,4 @@
-java:
+job:
   applicationPort: 8050
   image: 'hmctspublic.azurecr.io/fact/cron-trigger:latest'
   ingressHost: fact-cron-trigger-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
